refactor: 컨밴션에 맞게 개행 처리, 예외 메세지 상수화